# cv-match-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  STATUS_RESUMEN.md  fix_ai_config.py  fix_alembic.py  fix_audit_auth.py  fix_audit_auth2.py  fix_costs.py  fix_costs2.py  fix_cv_budget.py  fix_exports.py  fix_jd_prompts.py  fix_main_aitools.py  fix_main_audit.py  fix_main_feedback.py  fix_main_reports.py  fix_models.py  fix_models_enum.py  fix_parse_cv.py  fix_profiling2.py  fix_profiling3.py  fix_profiling4.py  fix_prompts.py  fix_run_match.py  fix_run_match2.py  main.py  pyproject.toml  start_dev.bat  update_status.py  update_status_jd.py  update_tasks.py
.agents/: AGENTS.md
.claude/: launch.json
.claude/skills/agregar-transicion-estado/: SKILL.md
.claude/skills/crear-tarea-celery/: SKILL.md
.claude/skills/maquina-de-estados/: SKILL.md
alembic/: env.py
alembic/versions/: 093babcf6bb6_add_whatsapp_conversation_to_process_.py  590a221e10f4_add_transcript_turns_to_profiling_runs.py  8bdf9ed89e3a_initial_schema.py  963559a48ef6_add_aifeedback_table.py  aa6557c28990_add_voice_call_tracking_and_config_.py  b1eba246e785_add_normalized_cv_url_to_candidates.py  d4a4444a2ab1_merge_whatsapp_conversation_y_aifeedback.py  d535de29cfdd_add_whatsapp_fields.py  fa2683c60fb2_add_cv_file_hash_to_candidates.py
docs/: api_contract.md  whatsapp_api_contract.md
scripts/: create_admin.py  create_recruiter.py  reset_and_verify.py  seed_ai_config.py  seed_test_candidates.py  seed_test_data.py  seed_voice_e2e_test.py  test_whatsapp.py  test_whatsapp_chat.py
src/: config.py
src/api/: deps.py  main.py
src/api/v1/: ai_config.py  ai_tools.py  audit.py  auth.py  candidates.py  debug.py  (+9 more)
(+48 files in other folders)
